--- a/style.css
+++ b/style.css
@@ -20,7 +20,15 @@ header{
     z-index: -1;
 }
 .header-backpic img{
+    position: relative;
+    top: 0px;
+    left: 0px;
+    height: 100%;
     width: 100%;
+    object-fit: cover;
+    transform: scale(1.2);
+    opacity: 1;
+    transition: 1.4s;
 }
 .nav{
     display: flex;
@@ -54,12 +62,16 @@ header{
 
 }
 .logo{
-    width: 19vw;
+    width: 18.5vw;
+    object-fit: contain;
+    margin-top: 40px;
 }
 .head h3{
-    font-size: 2.1em;
-    color: whitesmoke;
-    font-weight: lighter ;
+    margin-top: 30px;
+    color: white;
+    text-align: center;
+    font-size: 2.2rem;
+    font-weight:lighter;
     font-family: Okra, Helvetica, sans-serif;
 
      
@@ -68,10 +80,11 @@ header{
     display: flex;
     width: 55vw;
     align-items: center;
-    justify-content: flex-start;
+    justify-content: stretch;
     border-radius: 10px;
+    padding: 5px;
     background-color: white;
-    padding: 5px 0;
+    
 }
 .search input{
     outline: none;
@@ -102,25 +115,31 @@ header{
 .sec-1{
     display: flex;
     justify-content: center;
-    margin-bottom: 13vh;
+    margin-top: 40px;
+    width: max-content;
+    width: 100%;
+    height: 100%;
+}
+.full{
+    position: relative;
+    max-width: 1100px;
+    max-height: initial;
+    margin: 0 auto;
+
+    
 }
 .box{
     position: relative;
-    width: 265px;
+    width: 550px;
+    height: 400px;
     margin: 3px 5px;
     overflow: hidden;
     border-radius: 15px;
-    box-shadow: 0 1px 2px lightgrey;
+    box-shadow: 0 1px 2px rgb(240, 233, 233);
     background-color: rgb(243,240,240);
 
 }
-.box img{
-    width: 100%;
-    border-radius: 15px;
-    z-index: -1;
-    border: 1px solid rgb(204, 203, 203);
-    
-}
+
 .white{
     position: absolute;
     bottom: 3px;
@@ -142,13 +161,14 @@ header{
 
 }
 .middle{
-    margin:60px 150px;
+    margin:60px 0px;
 
 }
 .sec-2 h2{
-    font-size: 2.7rem;
+    font-size: 2.3rem;
     font-weight: lighter;
     margin-bottom: 10px;
+    margin-left: 0px;
     
 
 }
@@ -162,27 +182,30 @@ header{
     margin: 0;
     font-size: 1.2rem;
     font-weight: lighter;
+    font-family: Okra, Helvetica, sans-serif;
+    margin-left: 0px;
     color: rgb(99,98,98);
  } 
  .fa-caret-right, .sec-2 span{
-    color: rgb(248, 117, 117);
+     color: rgb(248, 117, 117);
+     
     
-
-
  }
- .box-1{
-    width: 300px;
-    height: 400px;
+ .box-1{                                           /*transpaent back of 4 images */
+    height: 350px;                              
     overflow: hidden;
     position: relative;
-    border-radius: 8px;
+    border-radius: 10px;
+   
+    
+   
 
  }
  .box-1 div{
     position: absolute;
-    background: linear-gradient(transparent, black);
+    background: linear-gradient(transparent, black);  
     width: 100%;
-    height: 25%;
+    height: 30%;
     display:flex;
     align-items: flex-end;
     bottom: 0;
@@ -198,19 +221,23 @@ header{
  .box-1 i{
     color: white;
     padding-bottom: 15px;
+    margin-right: 10rem;
 
  }
  .box-1 img{
-    width: 300px;
-    height: 400px;
+    height: 350px;                                                     /*4 images */
     object-fit: cover;
+    
+    
+    
 }
 .sec-3{
 
     display: flex;
     margin-top: 50px;
-    justify-content: space-between;
     margin-bottom: 130px;
+    gap: 7.5px;
+    justify-content: center;
     
     
 }
@@ -218,23 +245,23 @@ header{
     font-size: 2.1rem;
     font-weight: lighter;
     text-align:left;
-    margin-left: 0px;
     color:rgb(46, 45, 45)
 }
 .sec-4{
     display: grid;
     justify-content: center;
-    grid-column-gap: 20px;
-    grid-row-gap: 30px;
+    grid-column-gap: 15px;
+    grid-row-gap: 20px;
     grid-template-columns: 340px 340px 340px;
     align-items: center;
     grid-template: auto;
+    
 }
 .box-2{
     border: 1px solid rgb(235, 233, 233);
     box-shadow:0 1px 1px rgb(226, 233, 233);
-    width:340px;
-    height: 60px;
+    
+    
     overflow: hidden;
     border-radius: 10px;
 }
@@ -250,24 +277,20 @@ header{
 }
 .sec-5{
     display: flex;
-    margin: 90px 0;
-    padding: 40px 40;
+    margin: 120px 0;
+    padding: 40px;
     justify-content: center;
     background-color: rgb(255, 251, 247);
     
 }
 .flex{
     display: flex;
-
 }
-.img{
+img{
     width: 100%;
-
-
+    height: 80%;   
 }
-.img img{
-    width: 100%
-}
+
 .contact{
     width: 100%;
     overflow: hidden;
@@ -289,12 +312,13 @@ header{
     padding-bottom: 10px;
     font-size: 0.95rem;
     color: rgb(92, 91, 91);
+    font-size: inherit;
 }
 .address h2{
     font-size: 2.7rem;
     font-weight: lighter;
     margin-bottom: 20px;
-    color: rgb(34,43,34)
+    color: rgb(34,43,34);
 }
 .radio{
     display: flex;
@@ -382,7 +406,7 @@ header{
     font-size: 2 rem;
     font-weight: lighter;
     text-align:left;
-    margin-left: 0px;
+    margin-left: 15rem;
     color:rgb(46, 45, 45)
 
 }
