--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+
 body{
     margin: 0;
     padding: 0;
@@ -141,8 +142,13 @@ header{
 
 }
 .white span{
-    margin-left: 20px;
+    line-height: 32px;
+    font-size: 20px;
     
+}
+.white p{
+    margin: 0;
+    font-weight: lighter;  
 }
 .box img{
     width: 100%;
@@ -158,6 +164,7 @@ header{
     width: 100%;
     height: 25%;
     z-index: 2;
+    padding: 10px 20px 16px;
     
 }
 .white-p{
@@ -303,11 +310,9 @@ header{
     display: flex;
 }
 .footer{
-    
-    object-fit: cover;
-    width: 100%;
-    
-}
+    background-color: rgb(248, 248, 248);
+    object-fit: cover;    
+    }
 
 .contact{
     width: 100%;
@@ -318,15 +323,13 @@ header{
     margin: 0 auto;
 }
 .contact img{
-    width: 450px;
-    height: 450px;
-    padding-right: 30px;
-
+    width: 410px;
+    height: 435px;
+    margin-left: 60px;
 }
 .address{
     width: 500px;
-   
-    padding-left: 10px;
+    padding-left: 20px;
 }
 .address p{
     padding-bottom: 10px;
@@ -342,7 +345,7 @@ header{
 }
 .radio{
     display: flex;
-    justify-content: space-between;
+    gap: 50px;
     margin-right: 230px;
     margin-bottom: 20px;
 }
@@ -368,7 +371,7 @@ header{
     outline: rgb(255, 92, 92);
     font-size: 1.3rem;
     padding-left: 15px;
-    
+    margin-right: 50px;
 }
 .place{
     position: absolute;
@@ -400,7 +403,8 @@ header{
 }
 
 .row{
-    display: grid;
+    display: flex;
+    flex-direction: column;
     border: 1px solid rgb(235, 233, 233);
     box-shadow:0 1px 1px rgb(226, 233, 233);
     font-family: Okra, Helvetica, sans-serif;
@@ -408,7 +412,9 @@ header{
     font-weight: 400;
     font-stretch:normal;
     height: 60px;
-    margin: 20px 15rem 10px 15rem;
+    margin-left: 10rem;
+    margin-bottom: 20px;
+    margin-right: 10rem;
     padding: 5px;
     overflow: hidden;
     border-radius: 10px;
@@ -426,7 +432,7 @@ header{
     font-size: 2 rem;
     font-weight: lighter;
     text-align:left;
-    margin-left: 15rem;
+    margin-left: 11.3rem;
     margin-right: 70px;
     margin-top: -70px;
     color:rgb(46, 45, 45)
@@ -439,8 +445,9 @@ header{
 footer{
     background-color:rgb(248, 248, 248)
 }
+
 .sec-7{
-    
+    padding: 49px 0 22px;
     max-width: 1100px;
     margin: 0 auto;
     margin-top: 100px;
@@ -448,6 +455,7 @@ footer{
 .first{
     display: flex;
     justify-content: space-between;  
+    align-items: center;
 }
 .first-1{
     display: flex;
@@ -499,8 +507,11 @@ footer{
 .third{
     padding: 10px 0px;
     color: gray;
-    font-size: 0.8rem;
-    margin-left: 80px;
-    margin-right: 80px  ;
-    justify-content:flex-start;
+    font-size: 0.9rem;
+    
 }
+.sec-6{
+    margin-left: 20px;
+}
+/* media queries */
+
